--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@types/nodemailer": "^6.4.15",
+    "axios": "^1.6.8",
     "next": "14.2.3",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0"
